/*VERSION 0.3.0r2*/
*Added french translation by David Valot
*Fixed non responding close button in about dialog.

/*VERSION 0.3.0r1*/
*Updated italian translation by Giovanni Scafora

/*VERSION 0.3*/
*Changed the advanced window to a more sensible layout.
*Added options new to recordMyDesktop 0.3 and updated changed ones.
*Added tooltips on all options available through the advanced window.
*Implemented options saving, at program exit.
*Added support for localisation on all user-visible strings.

/*VERSION 0.2.1-r3*/
*bug in gtk version check,
thanks to Giovanni Scafora for quickly reporting it.

/*VERSION 0.2.1-r2*/
*Support for gtk-StatusIcon and gtk.2.10, which if present
make the egg(gnome-python-extras) dependency obsolete
*"cannot write to file" error has been added to unexpected exit status dialog.
*Updated Italian translation by Giovanni Scafora

/*VERSION 0.2.1-r1*/
*Italian translation by Giovanni Scafora
*Spanish translation by José "L. Redrejo" Rodríguez
*Applied patch from Giovanni Scafora to po/Makefile.in.in
*Fix on $prefix env variable not expanding within $datadir.

/*VERSION 0.2.1*/
*Changed the UI.
*A basic window now appears on launch,
while non-visible options can be
accessed through an 'advanced' button.
*The window contains a preview of the recording area,
and the selected region is outlined.
*Selection of the area can happen directly on the preview image.
*Selection of a window option
*Transition to automake build system
*Localization support
    Added: Greek language

/*VERSION 0.2*/
*Separated functionality in tabs.
*synced options to recordMyDesktop-0.2.5.
*Right click on tray icon now has a menu.
*Added 'About' dialog.
*New option to select the area over which the
next recording will take place.
*Exit status notification.
*Abnormal termination notification.
*New Options:
i)      Startup delay.
ii)     sound device,channels and frequency.
iii)    video and audio encoding quality.
iv)     Display to connect to.